--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,3 +92,24 @@ font-size: 20px;
 	color: white;
 	background-color: grey;
 }
+#email {
+	padding-left: 450px;
+	width: 30%;
+}
+#email img{
+	padding-left: 70px;
+}
+#instagram {
+	width: 50%;
+	text-decoration: none;
+	color: white;
+}
+#instagram img{
+	padding-left: 10px;
+	text-decoration: none;
+}
+#isi {
+	display: flex;
+	padding-left: 200;
+
+}
